# mmice

./: .gitignore  OBSERVATIONS.MD  README.MD  T5_pytorch_train_test_tutorial.ipynb  pyproject.toml  requirements.txt  run_all.sh  test_1.py  test_2.py
mmice/: dataset.py  edit_finder.py  editor.py  ppl.py  stage_one.py  stage_two.py  task_loader.py  utils.py
mmice/maskers/: checks.py  gradient_masker.py  mask_error.py  masker.py  random_masker.py  util.py
notebooks/: evaluation.ipynb
src/: dataset.py  edit_finder.py  editor.py  masker.py  stage_one.py  stage_two.py  utils.py
src/predictors/: predictor_utils.py
src/predictors/chileanhate/: chileanhate_beto.json  chileanhate_dataset_reader.py
src/predictors/chileanhate/data/: tweets_test.csv  tweets_train.csv
src/predictors/imdb/: imdb_dataset_reader.py
