[project]
name = "multilingual-mice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "huggingface-hub[hf-xet]>=0.32.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mauve-text>=0.4.0",
    "more-itertools>=10.7.0",
    "munch>=4.0.0",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "pip>=25.1.1",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
    "spacy>=3.8.7",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
